student attendance layout bugs fixing

--- a/src/public/asset/css/student-detail.css
+++ b/src/public/asset/css/student-detail.css
@@ -1,6 +1,12 @@
+* {
+    border-top-left-radius: 0px!important;
+    border-top-right-radius: 0px!important;
+    border-bottom-left-radius: 0px!important;
+    border-bottom-right-radius: 0px!important;
+}
 ul.nav.nav-tabs.nav-justified li,
 .panel.attendance-behavior {
-    background-color: #00B4BC;
+    background-color: #B1E0E8;
 }
 ul.nav.nav-tabs.nav-justified li a {
     font-size: 14px;
@@ -40,6 +46,7 @@ ul.attendance-behavior li:nth-child(2) {
     color: black;
     font-size: 14px;
     font-weight: bold;
+    position: relative;
 }
 ul.attendance-behavior li:nth-child(3) {
     width: 10%;
@@ -70,6 +77,7 @@ ul.attendance-behavior li:nth-child(7) {
     color: black;
     font-size: 14px;
     font-weight: bold;
+    position: relative;
 }
 .panel-heading.attendance-behavior {
     padding: 0;
@@ -151,7 +159,7 @@ hr.attendance-separator {
     display: block;
 }
 .present {
-    background-color: #00B4BC;
+    background-color: #B1E0E8;
 }
 .excused {
     background-color: #2F9DBB;
@@ -195,15 +203,17 @@ ul.list-group.legend-list li {
     border-bottom: solid 3px rgba(0, 0, 0, 0.1);
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.05);
 }
-.first-col-separator {
-    border-right: 3px solid #aaa;
-    margin-top: 4px!important;
-    margin-bottom: 4px!important;
+.col-separator {
+    border-left: 3px solid #aaa;
+    position: absolute;
+    top: 15%;
+    bottom: 15%
 }
 .last-col-separator {
     border-left: 3px solid #aaa;
-    margin-top: 5px!important;
-    margin-bottom: 5px!important;
+    position: absolute;
+    top: 50%;
+    bottom: 0;
 }
 .hide {
     display: none;
@@ -218,29 +228,35 @@ ul.list-group.legend-list li {
 .icon-legend.glyphicon.glyphicon-remove.pull-right:hover {
     cursor: pointer;
 }
-.light{
-    opacity: 0.6;
-    filter: opacity(60);
-}
 .grid-item .descriptor {
     position: relative;
-    top: 0px;
+    top: 0;
     left: 0px;
-    width: 92%;
+    width: 100%;
     background-color: #fff;
-    border: 1px solid #222;
     padding: 0px 2px;
     font-size: 10px;
     line-height: 12px;
     display: none;
     text-indent: 0px;
+    z-index: 9999;
+    padding-bottom: 10px;
+    padding-top: 5px;
+    padding-left: 5px;
+}
+.descriptor {
+    border: 1px solid #aaa;
 }
 .grid-item:hover {
-    z-index: 100;
+    z-index: 9999;
 }
 .grid-item:hover .descriptor {
     display: block;
     height: auto;
+}
+.light {
+    opacity: 0.9;
+    filter: opacity(90);
 }
 
 /* transcript css */
@@ -415,7 +431,7 @@ ul li.transcript-content:nth-child(7) {
     position: relative;
     top: 6px;
 }
-.transcript-font-color{
+.transcript-font-color {
     color: rgb(252, 230, 35);
     color: -moz-linear-gradient(-45deg, rgba(239, 119, 0, 1) 0%, rgba(242, 169, 0, 1) 37%, rgba(242, 204, 16, 1) 69%, rgba(252, 230, 35, 1) 100%);
     color: -webkit-gradient(linear, left top, right bottom, color-stop(0%, rgba(239, 119, 0, 1)), color-stop(37%, rgba(242, 169, 0, 1)), color-stop(69%, rgba(242, 204, 16, 1)), color-stop(100%, rgba(252, 230, 35, 1)));
@@ -424,4 +440,25 @@ ul li.transcript-content:nth-child(7) {
     color: -ms-linear-gradient(-45deg, rgba(239, 119, 0, 1) 0%, rgba(242, 169, 0, 1) 37%, rgba(242, 204, 16, 1) 69%, rgba(252, 230, 35, 1) 100%);
     color: linear-gradient(135deg, rgba(239, 119, 0, 1) 0%, rgba(242, 169, 0, 1) 37%, rgba(242, 204, 16, 1) 69%, rgba(252, 230, 35, 1) 100%);
     filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#fce623', endColorstr='#ef7700', GradientType=1);
+}
+.descriptor-title {
+    font-size: 14px;
+    font-weight: bolder;
+    letter-spacing: 2px;
+    margin-bottom: 21px;
+}
+.present-font-color {
+    color: #B1E0E8;
+}
+.excused-font-color {
+    color: #2F9DBB;
+}
+.late-font-color {
+    color: #4E73A7;
+}
+.holiday-font-color {
+    color: #765B74;
+}
+.unexcused-font-color {
+    color: #CD5728;
 }
